transport_test_errors_2.txt
cargo : warning: profiles for the non root 
package will be ignored, specify profiles at 
the workspace root:
At line:1 char:1
+ cargo test -p blindwire-transport --test 
e2e_test test_rate_limiting_ ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ( 
   warning: profil...workspace root::String)  
   [], RemoteException
    + FullyQualifiedErrorId : NativeCommandEr 
   ror
 
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-cli\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
warning: profiles for the non root package 
will be ignored, specify profiles at the 
workspace root:
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-core\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
warning: profiles for the non root package 
will be ignored, specify profiles at the 
workspace root:
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-server\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
warning: profiles for the non root package 
will be ignored, specify profiles at the 
workspace root:
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-transport\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
   Compiling blindwire-transport v0.1.0 
(C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-transport)
error[E0433]: failed to resolve: use of 
undeclared crate or module `hex`
  --> blindwire-transport\src\relay.rs:55:35
   |
55 |             .field("session_id", 
&hex::encode(self.session_id))
   |                                   ^^^ 
use of undeclared crate or module `hex`

For more information about this error, try 
`rustc --explain E0433`.
error: could not compile 
`blindwire-transport` (lib) due to 1 previous 
error
